# PhantomProbe

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  phantomprobe.py  pyproject.toml
.claude/: AGENTS.md
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml  release.yml
.swarm/: state.json
src/phantomprobe/: __init__.py  __main__.py
tests/: conftest.py  test_dashboard.py
